Tweak the arrangement a bit

--- a/python/first-steps/Gig comping arrangements.ipynb
+++ b/python/first-steps/Gig comping arrangements.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "id": "b0a6d6ab-bf15-4275-a252-383bd2795eb5",
    "metadata": {},
    "outputs": [
@@ -86,19 +86,18 @@
     "parse_abc(\"\"\"\n",
     "X:1\n",
     "T:The Night Has a Thousand Eyes\n",
-    "B:Steven's Comping Arrangements\n",
     "M:4/4\n",
     "L:1/8\n",
     "K:G\n",
-    "\n",
-    "|: [FBd]8          | [FBd]8          | [Gce]8       | [Gce]4 [Fce]4  |\n",
-    "   [FBd]8          | [FBd]8          | [Gce]8       | [Gce]4 [Fce]4  | !\n",
-    "   [=Fce]4         | [=FB_e]8        | [EAd]8       | [EAd]8         | !\n",
-    "   [Adf]4 [^Gd=f]4 | [Gce]4 [Fc_e]4  | [EBd]8       |1 [FB_e]8       :|2 [EBd]8 | ]  !\n",
-    "\n",
-    "   [_E_Bd]8      | [_EAd]8          | [DAc]8        | [DEAc]8       | !\n",
-    "   [_D_Ac]8      | [_DGc]8          | [CG_B]8       | [CG_B]8       | !\n",
-    "   [CGB]8        | [CFB]8           | [EAd]4 [FBe]4 | [^Gdf]8       | !\n",
+    "% A\n",
+    "|: [FBd]8          | [FBd]8          | [Gce]8       | [Gce]4 [Fce]4  |!\n",
+    "   [FBd]8          | [FBd]8          | [Gce]8       | [Gce]4 [Fce]4  |!\n",
+    "   [=Fce]4         | [=FB_e]8        | [EAd]8       | [EAd]8         |!\n",
+    "   [Adf]4 [^Gd=f]4 | [Gce]4 [Fc_e]4  | [EBd]8       |1 [FB_e]8       :|2 [EBd]8 | ]!\n",
+    "% B\n",
+    "   [_E_Bd]8      | [_EAd]8          | [DAc]8        | [DEAc]8       |!\n",
+    "   [_D_Ac]8      | [_DGc]8          | [CG_B]8       | [CG_B]8       |!\n",
+    "   [CGB]8        | [CFB]8           | [EAd]4 [FBe]4 | [^Gdf]8       |!\n",
     "   [Gce]8        | [Fc_e]8          | [EAd]4 [FBe]4 | [Gce]4 [Fce]4 |\n",
     "\"\"\").show()"
    ]
