Tweak the arrangement notes a bit

--- a/python/first-steps/Gig comping arrangements.ipynb
+++ b/python/first-steps/Gig comping arrangements.ipynb
@@ -15,6 +15,9 @@
     "These arrangements are for strings 5,4,3 exclusively (focusing on these three strings is my bridge to all-fourths tuning!)\n",
     "\n",
     "Skipping full arrangements for a few tunes\n",
+    "- The two blues tunes, and Oleo:\n",
+    "  - Stick with two-note shells for these for now, learn all 4 voicings on string pairs 3+4 and 4+5\n",
+    "  - Practice these with a metronome, at high speeds\n",
     "- So What:\n",
     "  - just look at the video at https://www.youtube.com/watch?v=e5LahFc53TU for a good arrangement\n",
     "  - for comping on strings 5/4/3, you can play Em11/Dm11 as either DGB/CFA at 2nd fret or ADG/GCF at 10th fret\n",
@@ -22,6 +25,7 @@
     "- Cantaloupe Island\n",
     "  - See https://www.youtube.com/watch?v=_gtppvzAdow and https://www.youtube.com/watch?v=rinzpkxJhms for the vamp\n",
     "  - For a fingerstyle arrangement see https://www.youtube.com/watch?v=bHx6Phlx1Ck\n",
+    "  - Another solo arrangement: https://www.youtube.com/watch?v=hKj__Ip0LqQ\n",
     "  - I can probably wing it if I use drop-2 or 3-note comp voicings instead, the changes come pretty slowly\n",
     "- Moanin'\n",
     "  - Play FJD/FCA for the lick on the A section... the 7s don't really matter much to the sound\n",
